--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <tr style="border 1px solid firebrick">
             <td>Hawaiian</td>
             <td>Chicken, pineapple, cheese, tomato sauce</td>
-            <td>8 dollars</td>
+            <td>XXXXXXXXXXXXX</td>
         </tr>
         <tr style="border:1px solid firebrick>
             <td>Pepperoni</td>
